fix(styling): notification mobile layout issue

--- a/src/pages/notification/index.module.scss
+++ b/src/pages/notification/index.module.scss
@@ -36,3 +36,11 @@
     color: var(--neutral-05);
   }
 }
+
+.notification{
+  :global{
+    .ant-tabs-nav{
+      margin: 0px var(--basePadding5);
+    }
+  }
+}
